change heroku deployment

--- a/.github/workflows/heroku.yml
+++ b/.github/workflows/heroku.yml
@@ -1,9 +1,12 @@
-name: Deploy
+name: Deploy to Heroku
+
+#on:
+#  push:
+#    branches:
+#      - master
 
 on:
-  push:
-    branches:
-      - master
+  [push, pull_request]
 
 jobs:
   build:
