--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,7 @@ spring:
     datasource:
         driverClassName: org.postgresql.Driver
         password: password
-        url: jdbc:postgresql://localhost:15432/apollo
+        url: jdbc:postgresql://${DATABASE_URL:localhost}:${SQL_PORT:15432}/${SQLDB:apollo}
         username: root
     jpa:
         show-sql: false
@@ -17,3 +17,7 @@ spring:
         name: todolist
     liquibase:
         default-schema: aquarius
+    redis:
+        host: ${redis.host:localhost}
+        port: ${redis.port:6379}
+        password: ${redis.password}
