--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,10 +1,10 @@
 spring:
-    port: ${PORT}
+    port: ${PORT:8080}
     datasource:
         driverClassName: org.postgresql.Driver
-        password: password
+        password: ${DB_PASSWORD:password}
         url: jdbc:postgresql://${DATABASE_URL:localhost}:${SQL_PORT:15432}/${SQLDB:apollo}
-        username: root
+        username: ${DB_USERNAME:root}
     jpa:
         show-sql: false
         properties:
