--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,9 +2,9 @@ spring:
     port: ${PORT:8080}
     datasource:
         driverClassName: org.postgresql.Driver
-        password: ${DB_PASSWORD:password}
-        url: jdbc:postgresql://${DATABASE_URL:localhost}:${SQL_PORT:15432}/${SQLDB:apollo}
-        username: ${DB_USERNAME:root}
+        password: ${PGPASSWORD:password}
+        url: jdbc:postgresql://${DB_HOST:localhost}:${SQL_PORT:15432}/${PGDATABASE:apollo}
+        username: ${PGUSER:root}
     jpa:
         show-sql: false
         properties:
