--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,7 @@ spring:
     datasource:
         driverClassName: org.postgresql.Driver
         password: ${PGPASSWORD:password}
-        url: jdbc:postgresql://${DB_HOST:localhost}:${SQL_PORT:15432}/${PGDATABASE:apollo}
+        url: jdbc:postgresql://${DB_HOST:localhost}:${PGPORT:15432}/${PGDATABASE:apollo}
         username: ${PGUSER:root}
     jpa:
         show-sql: false
