--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,6 @@
 spring:
     port: ${PORT:8080}
+
     datasource:
         driverClassName: org.postgresql.Driver
         password: ${PGPASSWORD:password}
@@ -21,3 +22,20 @@ spring:
         host: ${redis.host:localhost}
         port: ${redis.port:6379}
         password: ${redis.password}
+
+    security:
+        oauth2:
+            resourceserver:
+                jwt:
+                    # Replace with the domain of your Auth0 tenant.
+                    # Note the trailing slash is important!
+                    issuer-uri: ${issuer-uri}
+
+
+auth0:
+    audience: ${audience}
+
+
+logging:
+    level:
+        root: INFO
